...
    return  Scaffold(
      appBar: AppBar(
        title: const Text('Addresses'),
      ),
      body: const _HomePageBody(),
      floatingActionButton: FloatingActionButton(
        key: const Key('add_fab_home_page'),
        child: const Icon(Icons.add),
        onPressed: () => context.push('/maps')
      ),
    );
  }
}
...
    final addressesBloc = context.read<AddressesBloc>();
    final wasSuccessfully = await addressesBloc.deleteAddress(addressId);

    if (!context.mounted) return;

    final serverMsg = (wasSuccessfully) 
      ? 'Address was successfully deleted'
      : 'Address was not successfully deleted';

    Helpers.showSnackbar(
      context,
      message: serverMsg,
      isAnErrorMessage: !wasSuccessfully,
...
