...
  Future<AddressResponse> createAddress(Address newAddress) async {
    final newLatitude = newAddress.latitude.nonNullValue();
    final newLongitude = newAddress.longitude.nonNullValue();

    if (_addressValidation(newLatitude, newLongitude)) {
      return AddressResponse(
        msg: 'Address already registered'
      );
    }

    _emitLoading();

    final addresesResponse = await addressesRepository.createAddress(newAddress);
...
