...
        position: currentPosition,
      )
    };

    return Scaffold(
      appBar: AppBar(
        title: const Text('Maps Page'),
        actions: [
          if (address != null)
            IconButton(
              onPressed: _onDeleteAddress,
              icon: const Icon(Icons.delete),
              tooltip: 'Delete Address',
...
